# oracles

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  docker-compose.yml  iot_config.Dockerfile  make_deb.sh  mobile_config.Dockerfile  package.sh
aws_local/: Cargo.toml
aws_local/src/: README.md  lib.rs
ban_cli/: Cargo.toml
ban_cli/src/: lib.rs  main.rs  tracker.rs
boost_manager/: Cargo.toml  README.md  settings.toml
boost_manager/migrations/: 3_activated_hexes.sql  4_files_processed.sql
boost_manager/pkg/: settings-template.toml
boost_manager/src/: activator.rs  db.rs  lib.rs  main.rs  purger.rs  settings.rs  updater.rs  watcher.rs
boost_manager/tests/: activator_tests.rs  purger_tests.rs  updater_tests.rs  watcher_tests.rs
common/: Cargo.toml
common/src/: lib.rs
coverage_map/: Cargo.toml
coverage_map/src/: indoor.rs  lib.rs  outdoor.rs
coverage_point_calculator/: Cargo.toml
coverage_point_calculator/src/: hexes.rs  lib.rs  location.rs  service_provider_boosting.rs  speedtest.rs
coverage_point_calculator/tests/: coverage_point_calculator.rs
custom_tracing/: Cargo.toml
custom_tracing/src/: axum_layer.rs  grpc_layer.rs  http_layer.rs  lib.rs  settings.rs
dataset_downloader/: Cargo.toml
dataset_downloader/src/: lib.rs
dataset_downloader/tests/: downloader_test.rs
db_store/: Cargo.toml
db_store/src/: error.rs  iam_auth_pool.rs  lib.rs  meta.rs  metric_tracker.rs  settings.rs
density_scaler/: Cargo.toml  README.md
density_scaler/src/: error.rs  hex.rs  lib.rs  query.rs  server.rs  settings.rs
denylist/: Cargo.toml
denylist/src/: client.rs  denylist.rs  error.rs  lib.rs  main.rs  settings.rs
entropy/: Cargo.toml  README.md
entropy/src/: entropy_generator.rs  error.rs  lib.rs  main.rs  server.rs  settings.rs
file_store/: Cargo.toml
file_store/src/: aws_local.rs  bucket_client.rs  coverage.rs  emissions.rs  entropy_report.rs  error.rs  file_info.rs  file_info_poller.rs  file_info_poller_tm.rs  file_parsers.rs  file_sink.rs  file_sink_tm.rs  file_source.rs  file_source_tm.rs  file_store.rs  file_upload.rs  gzipped_framed_file.rs  heartbeat.rs  hex_boost.rs  incoming_data.rs  iot_beacon_report.rs  iot_invalid_poc.rs  iot_packet.rs  iot_valid_poc.rs  iot_witness_report.rs  lib.rs  lora_beacon_report.rs  lora_invalid_poc.rs  lora_valid_poc.rs  lora_witness_report.rs  main.rs  mobile_ban.rs  mobile_radio_invalidated_threshold.rs  mobile_radio_threshold.rs  mobile_session.rs  mobile_subscriber.rs  mobile_subscriber_mapping.rs  mobile_transfer.rs  promotion_reward.rs  radio_location_estimates.rs  (+17 more)
file_store/tests/: file_info_poller.rs  file_store_parsing.rs
file_store_helium_cli/: Cargo.toml
file_store_helium_cli/src/: bucket.rs  dump.rs  dump_mobile_rewards.rs  info.rs  lib.rs  main.rs
file_store_helium_proto/: Cargo.toml
file_store_helium_proto/src/: coverage.rs  entropy_report.rs  file_sink_write.rs  file_type.rs  lib.rs  main.rs  mobile.rs  msg_timestamp.rs  report_id.rs  reward_manifest.rs  traits.rs
file_store_oracles/: Cargo.toml
file_store_oracles/src/: file_type.rs  lib.rs  main.rs
file_store_shared/: Cargo.toml
file_store_shared/src/: error.rs  lib.rs
helium_iceberg/: Cargo.toml  docker-compose.yml  iceberg-compose.yml
helium_iceberg/examples/: stream_heartbeats.rs
helium_iceberg/migrations/: 1_iceberg_snapshots_processed.sql
helium_iceberg/scripts/: minio-init.sh
helium_iceberg/src/: branch.rs  catalog.rs  error.rs  iceberg_table.rs  lib.rs  memory_writer.rs  settings.rs  staged_writer.rs  table_creator.rs  test_harness.rs  writer.rs
helium_iceberg/tests/: batched_writer.rs  stream.rs  write_idempotent.rs
helium_iceberg_oracles/: Cargo.toml
helium_iceberg_oracles/src/: lib.rs
hex_assignments/: Cargo.toml
hex_assignments/src/: assignment.rs  footfall.rs  landtype.rs  lib.rs  service_provider_override.rs  service_provider_selected.rs  urbanization.rs
ingest/: Cargo.toml  README.md
ingest/pkg/: settings-template.toml
ingest/src/: attach_event.rs  error.rs  event_id.rs  heartbeat.rs  imsi.rs  lib.rs  main.rs  server.rs  server_5g.rs  server_chain.rs  server_iot.rs  server_lora.rs  server_mobile.rs  settings.rs
ingest/tests/: iot_ingest.rs  mobile_ingest.rs
ingest_chain/: Cargo.toml
ingest_chain/pkg/: settings-template.toml
ingest_chain/src/: main.rs  server.rs  settings.rs
ingest_mobile/: Cargo.toml
ingest_mobile/pkg/: settings-template.toml
ingest_mobile/src/: main.rs  server.rs  settings.rs
ingest_mobile/tests/: main.rs
iot_config/: Cargo.toml  README.md  settings.toml
iot_config/migrations/: 10_helium_devaddrs.sql  11_skf_max_copies.sql  12_admin_keys_name.sql  20230626183323_skip_empty_skf_routes.sql  20231101175438_track_deletes.sql  20240905172100_organization_locks.sql  20240905173723_rename_organizations.sql  20240912161250_organization_locks.sql  20241203190903_solana_net_ids.sql  20241203190910_solana_organizations.sql  20241203190923_solana_organization_devaddr_constraints.sql  20241203190936_solana_organization_delegate_keys.sql  20241203190945_update_oui_references.sql  20241203193256_add_solana_organizations_delete_trigger.sql  20241203193310_add_organization_locks.sql  20251027000000_gateways.sql  2_organizations.sql  3_routes.sql  4_regions.sql  5_admin_keys.sql  5_hpr_keys.sql  5_session_key_filters.sql  6_session_key_filters.sql  7_oracle_key_type.sql  8_skfs_by_route.sql  9_delegate_keys.sql
iot_config/pkg/: settings-template.toml
iot_config/src/: admin.rs  admin_service.rs  db_cleaner.rs  gateway_info.rs  gateway_service.rs  grpc_server.rs  helium_netids.rs  lib.rs  lora_field.rs  main.rs  org.rs  org_service.rs  region.rs  region_map.rs  route.rs  route_service.rs  session_key.rs  session_key_service.rs  settings.rs  sub_dao_epoch_reward_info.rs  sub_dao_service.rs  (+1 more)
iot_config_client/: Cargo.toml
iot_packet_verifier/: .env-template  Cargo.toml  Makefile  README.md
iot_verifier/: Cargo.toml  README.md
lora_verifier/: Cargo.toml  README.md
metrics/: Cargo.toml
(+1202 files in other folders)
