[profile.release]
debug = true

[workspace]
members = [
  "boost_manager",
  "custom_tracing",
  "db_store",
  "denylist",
  "file_store",
  "ingest",
  "iot_config",
  "iot_packet_verifier",
  "iot_verifier",
  "metrics",
  "mobile_config",
  "mobile_config_cli",
  "mobile_packet_verifier",
  "mobile_verifier",
  "poc_entropy",
  "price",
  "reward_index",
  "reward_scheduler",
  "solana",
  "task_manager",
]
resolver = "2"

[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anchor-client = "0.29.0"
anyhow = { version = "1", features = ["backtrace"] }
bs58 = { version = "0.4", features = ["check"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "1"
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
tokio-stream = "0"
sqlx = { version = "0", features = [
  "postgres",
  "uuid",
  "decimal",
  "chrono",
  "migrate",
  "macros",
  "runtime-tokio-rustls",
] }
helium-anchor-gen = { git = "https://github.com/helium/helium-anchor-gen.git" }
helium-crypto = { version = "0.8.4", features = ["sqlx-postgres", "multisig"] }
hextree = { git = "https://github.com/jaykickliter/HexTree", branch = "main", features = [
  "disktree",
] }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-program = "1.16"
spl-token = "3.5.0"
reqwest = { version = "0", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
] }
beacon = { git = "https://github.com/helium/proto", branch = "master" }
humantime = "2"
humantime-serde = "1"
metrics = ">=0.22"
metrics-exporter-prometheus = "0"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
  "env-filter",
  "registry",
  "fmt",
] }
rust_decimal = "1"
rust_decimal_macros = "1"
base64 = ">=0.21"
sha2 = "0.10"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
http = "<=0.2"
triggered = "0"
futures = "*"
futures-util = "*"
prost = "*"
pyth-sdk-solana = "=0.8"
once_cell = "1"
lazy_static = "1"
config = { version = "0", default-features = false, features = ["toml"] }
h3o = { version = "0", features = ["serde"] }
xorf = { version = "0", features = ["serde"] }
bytes = "*"
bincode = "1"
twox-hash = "1"
async-trait = "*"
blake3 = "*"
retainer = "*"
rand = "0.8"
itertools = "*"
tokio-util = "0"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0", features = ["trace"] }
derive_builder = "0"

[patch.crates-io]
sqlx = { git = "https://github.com/helium/sqlx.git", rev = "92a2268f02e0cac6fccb34d3e926347071dbb88d" }
