[profile.release]
debug = true

[workspace]
members = [
  "boost_manager",
  "coverage_map",
  "coverage_point_calculator",
  "custom_tracing",
  "db_store",
  "denylist",
  "file_store",
  "ingest",
  "iot_config",
  "iot_packet_verifier",
  "iot_verifier",
  "metrics",
  "mobile_config",
  "mobile_config_cli",
  "mobile_packet_verifier",
  "mobile_verifier",
  "poc_entropy",
  "price",
  "reward_index",
  "reward_scheduler",
  "solana",
  "task_manager",
  "hex_assignments",
]
resolver = "2"

[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anyhow = { version = "1", features = ["backtrace"] }
bs58 = { version = "0.4", features = ["check"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "1"
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
tokio-stream = "0"
sqlx = { version = "0", features = [
  "postgres",
  "uuid",
  "decimal",
  "chrono",
  "migrate",
  "macros",
  "runtime-tokio-rustls",
] }
helium-anchor-gen = { git = "https://github.com/helium/helium-anchor-gen.git" }
helium-crypto = { version = "0.8.4", features = ["multisig", "solana"] }
helium-lib = { git = "https://github.com/helium/helium-wallet-rs.git", branch = "master" }
hextree = { git = "https://github.com/jaykickliter/HexTree", branch = "main", features = [
  "disktree",
] }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
beacon = { git = "https://github.com/helium/proto", branch = "master" }
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "3.5.0"
reqwest = { version = "0", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
] }
humantime = "2"
humantime-serde = "1"
metrics = ">=0.22"
metrics-exporter-prometheus = "0"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
  "env-filter",
  "registry",
  "fmt",
] }
rust_decimal = "1"
rust_decimal_macros = "1"
base64 = ">=0.21"
sha2 = "0.10"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
http = "<=0.2"
triggered = "0"
futures = "*"
futures-util = "*"
prost = "0.12"
once_cell = "1"
lazy_static = "1"
config = { version = "0", default-features = false, features = ["toml"] }
h3o = { version = "0", features = ["serde"] }
xorf = { version = "0", features = ["serde"] }
bytes = "*"
bincode = "1"
twox-hash = "1"
async-trait = "*"
blake3 = "*"
retainer = "*"
rand = "0.8"
itertools = "*"
tokio-util = "0"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0", features = ["trace"] }
derive_builder = "0"

[patch.crates-io]
# v0.7.0-alpha.3
# https://github.com/launchbadge/sqlx/commit/42dd78fe931df651eac411316ed3eab87c2f79b2
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "42dd78fe931df651eac411316ed3eab87c2f79b2" }

# When attempting to test proto changes without needing to push a branch you can
# patch the github url to point to your local proto repo.
#
# Patching for beacon must point directly to the crate, it will not look in the
# repo for sibling crates.
#
# [patch.'https://github.com/helium/proto']
# helium-proto = { path = "../proto" }
# beacon = { path = "../proto/beacon" }

# [patch.'https://github.com/helium/helium-wallet-rs.git']
# helium-lib = { path = "../helium-wallet-rs/helium-lib" }
