[profile.release]
debug = true

[workspace]
members = [
  "coverage_map",
  "coverage_point_calculator",
  "custom_tracing",
  "db_store",
  "denylist",
  "file_store",
  "ingest",
  "iot_config",
  "iot_packet_verifier",
  "iot_verifier",
  "metrics",
  "mobile_config",
  "mobile_config_cli",
  "mobile_packet_verifier",
  "mobile_verifier",
  "poc_entropy",
  "price",
  "reward_index",
  "reward_scheduler",
  "solana",
  "task_manager",
  "hex_assignments",
  "aws_local",
  "tls_init",
]
resolver = "2"

[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bs58 = { version = "0.5.1", features = ["check"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "2"
http = "*" # pickup version from http-serde
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
tokio-stream = "0"
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "uuid",
  "rust_decimal",
  "chrono",
  "migrate",
  "macros",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
helium-crypto = { version = "0.9.3", default-features = false }
hextree = { git = "https://github.com/jaykickliter/HexTree", branch = "main", features = [
  "disktree",
] }
reqwest = { version = "0", default-features = false, features = [
  "gzip",
  "json",
  "http2",
  "default-tls",
] }
humantime = "2"
humantime-serde = "1"
metrics = ">=0.22"
metrics-exporter-prometheus = "0"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
  "env-filter",
  "registry",
  "fmt",
] }
rust_decimal = "1"
rust_decimal_macros = "1"
base64 = ">=0.21"
sha2 = "0.10"
triggered = "0"
futures = "*"
futures-util = "*"
config = { version = "0", default-features = false, features = ["toml"] }
h3o = { version = "0", features = ["serde"] }
xorf = { version = "0", features = ["serde"] }
bytes = "*"
bincode = "1"
twox-hash = "1"
async-trait = "*"
blake3 = "*"
retainer = "*"
rand = "0.8"
itertools = "0.14"
tokio-util = "0"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0", features = ["trace"] }
derive_builder = "0"
tempfile = "3"
csv = "*"
strum = { version = "0", features = ["derive"] }
strum_macros = "0"

### AWS
aws-config = "1.8"
aws-sdk-s3 = "1.94.0"
aws-sdk-sts = "1.76"
aws-sigv4 = "1.3.3"
aws-credential-types = "1.2.4"
aws-smithy-types-convert = { version = "0.60.9", features = [
  "convert-streams",
] }
url = "2.5.4"

### Protobuf
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
beacon = { git = "https://github.com/helium/proto", branch = "master" }
# Pickup versions from above
prost = "*"
tonic = { version = "*", features = ["tls-aws-lc", "tls-native-roots"] }

### TLS
# Updates to `rustls` now support multiple CryptoProvider backends. Namely
# `aws-lc-rs` (default) and `ring` (legacy).
#
# Until more crates have updated to default to `aws-lc-rs` we need to ensure
# that a single CryptoProvider backend is installed. Because of our heavy
# reliance on aws crates, we've chosen `aws-lc-rs`. Also because `rustls` has
# recently chosen that as it's default.
#
# If you're crate needs to use tls, add the following.
# // Cargo.toml
# tls-init = { path = "../tls_init" }
#
# // lib.rs
# `extern crate tls_init;`
#
# `tls_init` uses `ctor` to run a constructor when the code is loaded a single
# time. We need to `extern` the crate to prevent the linker from optimizing the
# codepath away because there are no direct calls into the workspace.


[patch.crates-io]
anchor-lang = { git = "https://github.com/madninja/anchor.git", branch = "madninja/const_pubkey" }

# When attempting to test proto changes without needing to push a branch you can
# patch the github url to point to your local proto repo.
#
# Patching for beacon must point directly to the crate, it will not look in the
# repo for sibling crates.
#
# [patch.'https://github.com/helium/proto']
# helium-proto = { path = "../proto" }
# beacon = { path = "../proto/beacon" }


# [patch.'https://github.com/helium/proto']
# helium-proto = { git = "https://www.github.com/helium/proto.git", branch = "kurotych/carrier-enablement" }
