[package]
name = "aws-local"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aws-config = "1.8.0"
aws-sdk-s3 = "1.94.0"
aws-types = { version = "0.51", optional = true, features = [
    "hardcoded-credentials",
] }
tokio = {workspace = true}
triggered = {workspace = true}
tonic = {workspace = true}
chrono = {workspace = true}
prost = {workspace = true}
anyhow = {workspace = true}
uuid = {workspace = true}
tempfile = {workspace = true}
file-store = { path = "../file_store", features = ["local"] }
