[package]
name = "aws-local"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tokio = { workspace = true }
triggered = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
file-store = { path = "../file_store", features = ["local"] }
