[package]
name = "boost-manager"
version = "0.1.0"
description = "Hex boosting manager"
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow = {workspace = true}
anchor-lang = "0.28"
anchor-spl = "0.28"
axum = {version = "0", features = ["tracing"]}
bs58 = {workspace = true}
config = {workspace = true}
clap = {workspace = true}
thiserror = {workspace = true}
serde =  {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
base64 = {workspace = true}
sha2 = {workspace = true}
lazy_static = {workspace = true}
triggered = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true}
prost = {workspace = true}
once_cell = {workspace = true}
mobile-config = {path = "../mobile_config"}
file-store = {path = "../file_store"}
db-store = { path = "../db_store" }
poc-metrics = {path = "../metrics"}
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
metrics = {workspace = true }
metrics-exporter-prometheus = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = {workspace = true, features = ["sqlx-postgres", "multisig", "solana"]}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
tonic = {workspace = true}
rand = {workspace = true}
async-trait = {workspace = true}
task-manager = { path = "../task_manager" }
http = {workspace = true}
http-serde = {workspace = true}
solana = {path = "../solana"}
solana-sdk = {workspace = true}
