[package]
name = "poc-common"
version = "0.1.0"
edition = "2021"
description = "Common code shared between Helium Mobile Network servers"
authors = ["Matthew Plant <matty@nova-labs.com>"]
license = "Apache-2.0"

[dependencies]
tracing = "0"
tower = "0.4"
metrics = "0.20"
metrics-exporter-prometheus = "0.11.0"