[package]
name = "coverage_map"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
h3o = { workspace = true }
helium-crypto = { workspace = true }
helium-proto = { workspace = true }
hex-assignments = { path = "../hex_assignments" }
hextree = { workspace = true }
mobile-config = { path = "../mobile_config" }
uuid = { workspace = true }
