[package]
name = "coverage-point-calculator"
version = "0.1.0"
description = "Calculate Coverage Points for hotspots in the Mobile Network"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
hextree = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
hex-assignments = { path = "../hex_assignments" }
