[package]
name = "custom-tracing"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = ">=0.7", features = ["tracing"], optional = true }
bs58 = { workspace = true }
helium-crypto = { workspace = true }
tonic = { workspace = true, optional = true }
http = { workspace = true, optional = true }
notify = { workspace = true }
serde ={ workspace = true }
tokio = { workspace = true }
tower-http ={ workspace = true }
tower-layer = { version = "0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(target_os = "macos")'.dependencies]
notify = { workspace = true, default-features = false, features = [
    "macos_fsevent",
] }


[features]
default = []
http-1 = ["axum"]
grpc = ["tonic", "http"]
