[package]
name = "dataset-downloader"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
hextree = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
async-compression = { workspace = true } 
file-store = { path = "../file_store" }
hex-assignments = { path = "../hex_assignments" }
