[package]
name = "db-store"
version = "0.1.0"
description = "Database Store Library"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
metrics = { workspace = true }
poc-metrics = { path = "../metrics" }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

aws-config = "1.8"
aws-sdk-sts = "1.76"
aws-sigv4 = "1.3.3"
new-aws-credential-types = {version = "1.2.4", package = "aws-credential-types"}
url = "2.5.4"

aws-credential-types = "0.54"
aws-smithy-http = "0.54.4"
aws-types = "0.54.1"
aws-sig-auth = "0.54.1"
