[package]
name = "db-store"
version = "0.1.0"
description = "Database Store Library"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
metrics = { workspace = true }
poc-metrics = { path = "../metrics" }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

aws-config = "1.8"
aws-sdk-sts = "1.76"
aws-sigv4 = "1.3.3"
aws-credential-types = "1.2.4"
url = "2.5.4"




