[package]
name = "db-store"
version = "0.1.0"
description = "Database Store Library"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
metrics = { workspace = true }
poc-metrics = { path = "../metrics" }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tls-init = { path = "../tls_init" }

aws-config = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { workspace = true }
aws-credential-types = { workspace = true }
url = { workspace = true }
