[package]
name = "density-scaler"
version = "0.1.0"
description = "Calculates hex density scaling factor based on relative neighbor population"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
chrono = {workspace = true}
triggered = {workspace = true}
prost = {workspace = true}
helium-proto = {workspace = true}
tonic = {workspace = true}
http = {workspace = true}
node-follower = { path = "../node_follower" }
h3ron = {workspace = true}
itertools = "*"
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
config = {workspace = true}
async-trait = {workspace = true}
