[package]
name = "denylist"
version = "0.1.0"
edition = "2021"
description = "Maintains latest denylist"
authors = ["Andrew McKenzie <andrewm@nova.xyz>"]
license = "Apache-2.0"


[dependencies]
thiserror = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
helium-crypto = {workspace = true}
base64 = {workspace = true}
sha2 = {workspace = true}
bytes = {workspace = true}
structopt = {workspace = true}
bincode = {workspace = true}
twox-hash = {workspace = true}
xorf = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
config = {workspace = true}
