[package]
name = "denylist"
version = "0.1.0"
edition.workspace = true
description = "Maintains latest denylist"
authors.workspace = true
license.workspace = true


[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
helium-crypto = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
xorf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
xorf-generator = { git = "https://github.com/helium/xorf-generator", branch = "main" }
humantime-serde = { workspace = true }
