[package]
name = "poc-entropy"
version = "0.1.0"
edition = "2021"
description = "PoC Entropy Server for the Helium Network"
authors = ["Marc Nijdam <marc@nova-labs.com>"]
license = "Apache-2.0"

[dependencies]
dotenv = "0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "rt-multi-thread",
  "rt",
] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
base64 = "0"
sha2 = "*"
http = "*"
hyper = "*"
axum = { version = "0", features = ["headers"] }
tower-http = {version = "*", features = ["auth", "trace"]}
jsonrpsee = { version = "0", features = ["async-client", "http-client"] }
chrono = { version = "0", features = ["serde"] }
triggered = "0"
futures = "*"
futures-util = "*"
prost = "*"
bs58 = "*"
metrics = "0"
metrics-exporter-prometheus = "0"
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
helium-crypto = {git = "https://github.com/helium/helium-crypto-rs", tag="v0.4.4", features=["sqlx-postgres"]}
file-store = { path = "../file_store" }
poc-metrics = { path = "../metrics" }

[package.metadata.deb]
depends = "$auto"
assets = [
  [
    "target/release/poc-entropy",
    "/opt/poc-entropy/bin/",
    "755",
  ],
  [
    "pkg/deb/env-template",
    "/usr/share/poc-entropy/env-template",
    "644",
  ],
]
maintainer-scripts = "pkg/deb/"
systemd-units = {}
