[package]
name = "poc-entropy"
version = "0.1.0"
description = "PoC Entropy Server for the Helium Network"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dotenv = {worksace = true}
clap = {workspace = true}
thiserror = {workspace = true}
serde =  {workspace = true}
serde_json = {workspace = true}
base64 = "0"
sha2 = "*"
http = "*"
hyper = "*"
axum = { version = "0", features = ["headers"] }
jsonrpsee = { version = "0", features = ["async-client", "http-client"] }
triggered = "0"
futures = "*"
futures-util = "*"
prost = "*"
bs58 = "*"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = {workspace = true }
metrics-exporter-prometheus = { worksace = true }
tokio = { workspace = true }
chrono = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
file-store = { path = "../file_store" }
poc-metrics = { path = "../metrics" }

[package.metadata.deb]
depends = "$auto"
assets = [
  [
    "target/release/poc-entropy",
    "/opt/poc-entropy/bin/",
    "755",
  ],
  [
    "pkg/deb/env-template",
    "/usr/share/poc-entropy/env-template",
    "644",
  ],
]
maintainer-scripts = "pkg/deb/"
systemd-units = {}
