[package]
name = "file-store"
version = "0.1.0"
description = "Ingest Store Library"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
triggered = { workspace = true }
async-compression = { version = "0", features = ["tokio", "gzip"] }
futures = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
bytes = "*"
regex = "1"
tracing = { workspace = true }
chrono = { workspace = true }
helium-crypto = { workspace = true }
metrics = { workspace = true }
poc-metrics = { path = "../metrics" }
sqlx = { workspace = true, optional = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
retainer = { workspace = true }
task-manager = { path = "../task_manager" }
tls-init = { path = "../tls_init" }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types-convert = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["sqlx-postgres"]
sqlx-postgres = ["sqlx/postgres"]
