[package]
name = "file_store_helium_cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }

file-store = { path = "../file_store" }
file-store-helium-proto = { path = "../file_store_helium_proto" }
