[package]
name = "file-store-oracles"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
helium-crypto = { workspace = true }
helium-proto = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
h3o = { workspace = true }
beacon = { workspace = true }
blake3 = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
strum = { workspace = true }

# cli deps
base64 = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

file-store = { path = "../file_store" }

[dev-dependencies]
hex-literal = "*"
