[package]
name = "helium-iceberg"
version = "0.1.0"
description = "Apache Iceberg table writer for Helium Oracles"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["test-harness"]
test-harness = ["dep:trino-rust-client", "dep:uuid"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Iceberg dependencies
iceberg = "0.8"
iceberg-catalog-rest = "0.8"

# HTTP client for direct catalog API calls (branch operations)
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
uuid = { workspace = true }

# Arrow dependencies
arrow-array = "57"
arrow-json = "57"
arrow-schema = "57"
parquet = "57"

tls-init = { path = "../tls_init" }

# Test harness dependencies (optional)
trino-rust-client = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
